--- a/D3.js-Choropleth_Map/index_choropleth.html
+++ b/D3.js-Choropleth_Map/index_choropleth.html
@@ -1,7 +1,7 @@
 <html>
 <!-- Stefan Cherubin
 snc261
-Last updated 11/15/18 -->
+Last updated 11/18/18 -->
 <head>
    
     <style>
@@ -46,29 +46,29 @@ Last updated 11/15/18 -->
 let body = d3.select("#map")
 let body2 = d3.select("#AirlinesChart")
 
-Promise.all([
-  d3.csv("Aid Data Countries - Aggregated.csv"),
+Promise.all([ //Load the sample data file and countries.geo.json
+  d3.csv("Aid Data Countries - Aggregated - Fixed.csv"),
   d3.json("countries.geo.json")
 ]).then(showData)
 
 function showData(datasources){
   let mapInfo = datasources[1]
   let data = datasources[0]
-  console.log(data)
+  //console.log(data)
 
   let dataIndexDonations = {}
   for (let i of data){
     let country = i.country
     dataIndexDonations[country] = +i.donated
   }
-  console.log(dataIndexDonations)
+ //console.log(dataIndexDonations)
 
   let dataIndexReceived = {}
   for (let s of data){
     let country = s.country
     dataIndexReceived[country] = +s.received
   }
-  console.log(dataIndexReceived)
+  //console.log(dataIndexReceived)
 
   mapInfo.features = mapInfo.features.map(d => { 
     let country = d.properties.name;
@@ -79,7 +79,7 @@ function showData(datasources){
     return d;
 
   })
-  console.log(mapInfo)
+  //console.log(mapInfo)
 
   let maxDonation = d3.max(mapInfo.features, d => d.properties.Donated)
   let medianDonation = d3.median(mapInfo.features, d => d.properties.Donated)
@@ -87,17 +87,18 @@ function showData(datasources){
   let maxReceived = d3.max(mapInfo.features, d => d.properties.Received)
   let medianReceived = d3.median(mapInfo.features, d => d.properties.Received)
 
+  //Linearly scale the amount from 0 -> median -> max of both donated and received amount
   let dScale = d3.scaleLinear()
-  .domain([0, maxDonation])
+  .domain([0, medianDonation, maxDonation])
   .range(["white", "orange", "red"])
 
   let rScale = d3.scaleLinear()
-  .domain([0, maxReceived])
+  .domain([0, medianReceived, maxReceived])
   .range(["white", "blue", "purple"])
 
   let width = 600
   let height = 400
-  console.log(maxDonation)
+  //console.log(maxDonation)
 
   let containera = d3.select("#AirlinesChart");//TODO: select the svg with id Map
      //TODO: set the width and height of the conatiner to be equal the width and height variables.
